# IdleSnub

./: CMakeLists.txt  LICENSE.md  README.md
IdleSnub/: CMakeLists.txt
IdleSnub/headers/: IdleSnub.h  MouseController.h  MouseInterpolates.h  UserInterface.h
IdleSnub/src/: IdleSnub.cpp  MouseController.cpp  MouseInterpolates.cpp  UserInterface.cpp
